samples/_failures_safe/1761696128_a5296a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d0b56cf.c: In function ‘main’:
./samples/SAFE/__tmp_3d0b56cf.c:131:5: error: expected ‘{’ at end of input
  131 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_3d0b56cf.c:131:5: error: expected declaration or statement at end of input
